[tool.poetry]
name = "damm32"
version = "0.0.3"
description = "A pure-python implementation of the Damm Algorithm in Base 32."
authors = ["Dan Trickey <dan@trickey.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pyinv/damm32"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-comprehensions = "^2.1"
flake8-debugger = "^3.1"
flake8-docstrings = "^1.3"
flake8-isort = "^2.6"
flake8-mutable = "^1.2"
flake8-todo = "^0.7.0"
mypy = "^0.670.0"
pytest = "^4.3"
pytest-cov = "^2.6"
isort = {version = "^4.3",extras = ["pyproject"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
